--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
 
     <!-- Dialog Box -->
     <div id="dialog-box">
-        <div id="avatar-container">
-            <img id="avatar" src="" alt="Topflappen">
-        </div>
+        <div id="avatar-container"></div>
         <div id="text-container">
             <div id="dialog-text"></div>
             <div id="choices-container"></div>
@@ -44,13 +42,14 @@
     <!-- QR Warning -->
     <div id="qr-warning" class="hidden">
         <div class="warning-box">
-            <img id="angry-lappen" src="" alt="Wütender Topflappen">
+            <div id="angry-lappen"></div>
             <h2>HEY!</h2>
             <p>Scann mich erst mal ordentlich mit dem QR-Code!</p>
             <p class="small">Du glaubst doch nicht ernsthaft, dass du hier einfach so reinkommst?</p>
         </div>
     </div>
 
+    <script src="js/avatars.js"></script>
     <script src="js/main.js"></script>
     <script src="js/game.js"></script>
 </body>
