Geminislop is back

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
             <div id="progress">
                 <span id="current">1</span> / <span id="total">6</span>
             </div>
+            <div id="text-container">
+    <p id="story-text"></p>
+    <div class="next-indicator">▼</div> 
+</div>
         </div>
 
         <!-- Navigation hint -->
